dev-ops/rancher/master-data-service.yml
#
# Copyright 2026 Jaroslav Chmurny
#
# This file is part of City Navigator.
#
# City Navigator is free software developed for educational and experimental
# purposes. It is licensed under the Apache License, Version 2.0 # (the
# "License"); you may not use this file except in compliance with the
# License. You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: master-data-svc-deployment
  namespace: city-navigator
  labels:
    application: city-navigator
    component: master-data-service
    environment: sandbox
spec:
  replicas: 1
  template:
    metadata:
      name: master-data-svc
      labels:
        application: city-navigator
        component: master-data-service
        environment: sandbox
    spec:
      automountServiceAccountToken: false
      containers:
        - name: master-data-service
          image: jardo72/city-navigator-master-data-service:latest
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /version
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /version
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              cpu: "500m"
              memory: "750M"
            limits:
              cpu: "1000m"
              memory: "1.5G"
          volumeMounts:
            - name: logging-config
              mountPath: /usr/src/app/logging.yaml
              subPath: logging.yaml
      volumes:
        - name: logging-config
          configMap:
            name: master-data-svc-logging-config
  selector:
    matchLabels:
      application: city-navigator
      component: master-data-service
      environment: sandbox
  strategy:
    type: RollingUpdate

---
apiVersion: v1
kind: Service
metadata:
  name: master-data-svc-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: master-data-service
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: master-data-service
    environment: sandbox
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
