dev-ops/rancher/redis.yml
#
# Copyright 2026 Jaroslav Chmurny
#
# This file is part of City Navigator.
#
# City Navigator is free software developed for educational and experimental
# purposes. It is licensed under the Apache License, Version 2.0 # (the
# "License"); you may not use this file except in compliance with the
# License. You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: city-navigator
  labels:
    application: city-navigator
    component: redis
    environment: sandbox
spec:
  replicas: 1
  template:
    metadata:
      name: redis
      labels:
        application: city-navigator
        component: redis
        environment: sandbox
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: Always
          command:
            - redis-server
            - --requirepass
            - $(REDIS_PASSWORD)
          ports:
            - containerPort: 6379
              protocol: TCP
  selector:
    matchLabels:
      application: city-navigator
      component: redis
      environment: sandbox
  strategy:
    type: RollingUpdate

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: city-navigator
  labels:
    application: city-navigator
    component: redis
    environment: sandbox
spec:
  type: ClusterIP
  selector:
    application: city-navigator
    component: redis
    environment: sandbox
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
